--- a/style.scss
+++ b/style.scss
@@ -97,7 +97,7 @@ $color4: #edf9fc;
   #image-slider {
     img {
       width: 100%;
-      height: 95dvh;
+      height: 50dvh;
       object-fit: cover;
       display: none;
       opacity: 0;
@@ -457,34 +457,7 @@ $color4: #edf9fc;
     }
    
   }
-  aside {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: absolute;
-    right: 0;
-    height: 100dvh;
-    width: 0;
-    opacity: 0;
-    transition: 0.2s;
-    z-index: 1;
-    &.active {
-      width: 400px;
-      opacity: 1;
-    }
-    section {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-    }
-
-    button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      width: fit-content;
-    }
-  }
+ 
   #to-top {
     position: fixed;
     right: 2vw;
@@ -503,7 +476,116 @@ $color4: #edf9fc;
     }
   }
 }
-
+aside {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  position: fixed;
+  right: 0;
+  top: 0;
+  min-height: 100dvh;
+  padding-inline:15px;
+  width: 0;
+  background-color: white;
+  opacity: 0;
+  transition: 0.2s;
+  z-index: 1;
+  box-shadow: 0 0 20px #666;
+  &.active {
+    width: 400px;
+    opacity: 1;
+  }
+  #cart-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    white-space: nowrap;
+    #close-cart {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 24px;
+      font-weight: 700;
+      margin-bottom: 30px;
+    }
+    p{
+      font-size: 30px;
+      font-weight: 700;
+    }
+    .item{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .item-detail{
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: 5px;
+        width: 100%;
+        img{
+          width: 30%;
+          height: 70%;
+          object-fit: cover;
+        }
+        .text{
+          display: flex;
+          flex-direction: column;
+          .remove-item{
+            width: fit-content;
+            background:none;
+            border: none;
+            color: black;
+            cursor: pointer;
+            font-size: 18px;
+          }
+        }
+      }
+      .amount-price{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        label{
+          display: flex;
+          align-items: center;
+          input[type='number']{
+            width: 8ch;
+            padding: 3px 8px;
+          }
+        }
+       
+        span{
+          font-size: 20px;
+          font-weight: 700;
+        }
+      }
+    }
+    #keep-shopping,#go-checkout{
+      text-decoration: none;
+      background-color: #005792;
+      color: white;
+      font-weight: 700;
+      font-size: 18px;
+      padding: 3px 8px;
+      border: none;
+    }
+    #go-checkout{
+      display: none;
+    }
+  }
+  #close-menu{
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 30px;
+  }
+  a{
+    text-decoration: none;
+    color: black;
+    text-align: center;
+  }
+}
 
 
 :root:has(#login:checked){
