--- a/style.scss
+++ b/style.scss
@@ -226,6 +226,23 @@ $color4: #edf9fc;
       }
     }
   }
+  .pagination{
+    display: flex;
+    justify-content: space-evenly;
+    a {
+      text-decoration: none;
+      color: $color1;
+      font-size: 2rem;
+      &.active {
+        background-color: $color1;
+        color: white;
+      }
+      &.disable {
+        pointer-events: none; //不會有點擊觸發的事件
+        color: $color2;
+      }
+    }
+  }
   #popular-items-slider{
     position: relative;
     height: 50dvh;
@@ -483,7 +500,7 @@ aside {
   position: fixed;
   right: 0;
   top: 0;
-  min-height: 100dvh;
+  height: 100dvh;
   width: 0;
   background-color: white;
   opacity: 0;
@@ -493,6 +510,7 @@ aside {
   &.active {
     width: 400px;
     opacity: 1;
+    overflow-y: auto;
   }
   #cart-content {
     display: flex;
@@ -516,6 +534,7 @@ aside {
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-block-end:15px ;
       .item-detail{
         display: flex;
         justify-content: space-evenly;
@@ -529,6 +548,10 @@ aside {
         .text{
           display: flex;
           flex-direction: column;
+          width: 50%;
+          h4{
+            white-space: normal;
+          }
           .remove-item{
             width: fit-content;
             background:none;
@@ -559,7 +582,7 @@ aside {
       }
     }
     #total-price{
-      display: flex;
+      display: none;
         justify-content: space-around;
         width: 100%;
         margin-block: 30px;
@@ -579,6 +602,8 @@ aside {
       font-size: 18px;
       padding: 3px 8px;
       border: none;
+      margin-block: 15px;
+      cursor: pointer;
     }
     #go-checkout{
       display: none;
@@ -673,6 +698,12 @@ aside {
         }
       }
     }
+    .pagination {
+      a{
+        font-size: 1rem;
+      }
+     
+    }
     #products-layout{
       flex-direction: column;
       img{
@@ -730,6 +761,11 @@ aside {
         }
       }
     }
+    .pagination {
+      a{
+        font-size: 1.2rem;
+      }      
+    }
     #products-layout{
       flex-direction: column;
       img{
@@ -774,6 +810,12 @@ aside {
           display: none;
         }
       }
+    }
+    .pagination {
+      a{
+        font-size: 1.5rem;
+      }
+   
     }
     #products-layout{
       flex-direction: column;
